--- a/index.html
+++ b/index.html
@@ -4,13 +4,72 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    padding: 50px;
+    padding: 100px;
+    
 }
+ul {
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    
+}
+
+li {
+    float: left;
+    padding: 14px;
+    text-decoration: none;
+}
+li:hover{
+    text-decoration: underline;
+}
+.button {
+  background-color: #4387fd;
+  border: 1px;
+  border-radius: 2px;
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: bold;
+  float: right;
+  position: fixed;
+  top: 10px;
+  right: 20px;
+
+}
+.button:hover {
+  box-shadow: 0 0px 3px 0 rgba(0,0,0,0.24), 0 0px 3px 0 rgba(0,0,0,0.19);
+}
+input {
+    width: 584px;
+    position: relative;
+    margin: auto;
+    padding-top: 6px;
+    background-image: 
+}
+
     </style>
     <head>
         <title>Google</title>
         <body> <img class="logo" src= "https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt= "Google logo">
+<ul>
+    <li>About</li>
+    <li>Store</li>
+    <li style= "float: right; width: 200">Images</li>
+    <li style= "float: right; width: 35">Gmail</li>
+</ul>
+<button class="button">Sign in</button>
+<input type="search" id="site-search" name="q"
+       aria-label="Search through site content">
+
+<button>Search</button>
 
         </body>
     </head>
